--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Steven's Website</title>
-    <h1>Steven Cochran</h1>
-    <h2>Wednesday</h2>
-    <p>"Kachow" - Lightning McQueen</p>
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-
+    <h1>Steven Cochran</h1>
+    <h2>Wednesday</h2>
+    <p>"Kachow" - Lightning McQueen</p>
+    <div class="boxa">
+    </div>
+    <div class="boxb">
+        <h1 class="bxh1">This is a box</h1>
+    </div>
+    <div class="boxc">
+        <h2 class="bxh2">I hope I am orange!</h2>
+    </div>
 </body>
 </html>
