--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <title>Steven's Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
