--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-    <h1>Steven Cochran</h1>
-    <h2>Wednesday</h2>
-    <p>"Kachow" - Lightning McQueen</p>
-    <div class="boxa">
+
+    <nav>
+        <div class="logo">
+        </div>
+    </nav>
+
+    <div class="con1">
+        <p class="b1"></p>
+        <p class="b2"></p>
+        <p class="b3"></p>
+        <p class="b4"></p>
     </div>
-    <div class="boxb">
-        <h1 class="bxh1">This is a box</h1>
-    </div>
-    <div class="boxc">
-        <h2 class="bxh2">I hope I am orange!</h2>
+
+
+    <div class="footer">
+        <h1> Copyright Current Year</h1>
     </div>
 </body>
 </html>
